# dec-hlp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  python-release.yml  release.yml
dec-hlp/: Cargo.toml
dec-hlp-ffi/: Cargo.toml
dec-hlp-ffi/include/: dec_hlp.h
dec-hlp-ffi/src/: lib.rs
dec-hlp-python/: Cargo.toml  pyproject.toml
dec-hlp-python/python/dec_hlp/: __init__.py  _dec_hlp.pyi
dec-hlp-python/src/: lib.rs
dec-hlp/src/: binary.rs  builder.rs  engine.rs  lib.rs  library.rs  source.rs
dec-hlp/tests/: pipeline_tests.rs
docs/: cli-specification.md  design-cicd-publishing.md  design-ffi-bindings.md  design-library-api.md  design-test-strategy.md  research-example-files.md  research-interactive-behavior.md  research-source-format.md  spec-hlib-format.md
examples/: README.md
examples/c/: list_topics.c  lookup_topic.c
examples/cpp/: browse_help.cpp
examples/python/: build_library.py  interactive_browse.py  list_topics.py  lookup_topic.py
examples/rust/: build_library.rs  list_topics.rs  lookup_topic.rs
hlp/: Cargo.toml
hlp/src/: main.rs
hlp/tests/: cli_tests.rs
testdata/: bad-name-too-long.hlp  bad-skip-level.hlp  edge-cases.hlp  merge-a.hlp  merge-b.hlp  minimal.hlp  multilevel.hlp  qualifiers.hlp
