[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dec-hlp"
version = "0.1.0"
description = "Python bindings for the dec-hlp VMS help library"
license = {text = "MIT"}
requires-python = ">=3.8"
urls = {Repository = "https://github.com/ccebelenski/dec-hlp"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dec_hlp._dec_hlp"
